--- a/NoSQL_setup_starter.ipynb
+++ b/NoSQL_setup_starter.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 1,
    "id": "2bcbf815-f367-4e6d-bbe2-6c45953657b7",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 2,
    "id": "59390c4a",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 3,
    "id": "7f9ececa",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 4,
    "id": "71e373c1",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 5,
    "id": "ef1b89ed",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 6,
    "id": "6a0d92df",
    "metadata": {},
    "outputs": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 7,
    "id": "11c9f11b",
    "metadata": {},
    "outputs": [],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 8,
    "id": "c2da7648",
    "metadata": {},
    "outputs": [],
@@ -195,17 +195,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 9,
    "id": "a6e5cece",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertOneResult at 0x199f84b9dc0>"
+       "<pymongo.results.InsertOneResult at 0x15be5eddeb0>"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 10,
    "id": "63bb10f9",
    "metadata": {},
    "outputs": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 11,
    "id": "93c63829",
    "metadata": {},
    "outputs": [
@@ -310,17 +310,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 12,
    "id": "7f599f3d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x199f82f6250>"
+       "<pymongo.results.UpdateResult at 0x15be5edd970>"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 13,
    "id": "a6ad16f7",
    "metadata": {},
    "outputs": [
@@ -372,17 +372,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 14,
    "id": "c80f4cb3-eb5a-498e-a061-1ecf922000b3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "38787"
+       "38788"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 15,
    "id": "768474a6",
    "metadata": {},
    "outputs": [
@@ -423,17 +423,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 16,
    "id": "a11d5f1b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.DeleteResult at 0x199f82d7640>"
+       "<pymongo.results.DeleteResult at 0x15be5eddb20>"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 17,
    "id": "2a51aba0",
    "metadata": {},
    "outputs": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 18,
    "id": "8c356f7b",
    "metadata": {},
    "outputs": [
@@ -510,7 +510,7 @@
        "   'href': 'https://api.ratings.food.gov.uk/establishments/1043695'}]}"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,17 +538,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 19,
    "id": "fd4112ce",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x199f44298e0>"
+       "<pymongo.results.UpdateResult at 0x15be5edd2e0>"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,17 +569,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 20,
    "id": "04430a5b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x199f84b81f0>"
+       "<pymongo.results.UpdateResult at 0x15be5d74130>"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,17 +592,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 21,
    "id": "92524ccc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x199f84a0af0>"
+       "<pymongo.results.UpdateResult at 0x15be5d743a0>"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 22,
    "id": "0deacaf9",
    "metadata": {},
    "outputs": [
